--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -1,1 +1,8 @@
-@import components/titles
+@import './components/_pattern'
+@import './components/_reset'
+@import './components/_responsive'
+@import './components/_contato'
+@import './components/_equipe'
+@import './components/_day-clinic'
+@import './components/_banner'
+@import './components/_localizacao'
