--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -699,6 +699,7 @@ li {
           height: auto; }
 
 .mobile-dayClinic {
+  display: none !important;
   width: 100%;
   background: #fff;
   position: fixed;
@@ -729,7 +730,7 @@ li {
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center;
-    gap: 4rem; }
+    gap: 2rem !important; }
     .mobile-dayClinic .infos-mobile-dayClinic .ligar-mobile-dayClinic a {
       padding: 1rem 5rem;
       background: #c8bcac;
@@ -746,6 +747,64 @@ li {
       color: #c8bcac; }
       .mobile-dayClinic .infos-mobile-dayClinic .mapa-mobile-dayClinic a i {
         font-size: 1.5rem; }
+
+@media only screen and (max-width: 456px) {
+  .mobile-dayClinic {
+    display: block !important; }
+  .s-dayClinic {
+    margin: 6rem 0; }
+    .s-dayClinic .container .info-dayClinic {
+      display: block;
+      width: 100%; }
+      .s-dayClinic .container .info-dayClinic .dayClinic-left {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        text-align: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        width: 100%;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left p {
+          color: #7a7a7a;
+          margin: 2rem 0;
+          width: 100%;
+          font-size: 14px; }
+        .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left h2 {
+          color: #c8bcac;
+          font-size: 35px; }
+        .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left a {
+          color: #7a7a7a; }
+      .s-dayClinic .container .info-dayClinic .dayClinic-right {
+        width: 100vw !important;
+        background: none !important;
+        padding: 0rem !important;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .s-dayClinic .container .info-dayClinic .dayClinic-right .img-right-dayClinc img {
+          width: 100%;
+          height: auto; } }
 
 .container {
   width: 90%;
@@ -866,3 +925,175 @@ li {
           max-width: 100%; }
           .s-localizacao .container .info-localizacao .right-localizacao .info-left-localizacao .localizacao-mapa iframe {
             width: 100%; }
+
+@media only screen and (max-width: 456px) {
+  .s-localizacao {
+    background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .s-localizacao .container .info-localizacao {
+      background: #fff;
+      display: block; }
+      .s-localizacao .container .info-localizacao .left-localizacao {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        width: 100% !important;
+        padding-left: 0 !important; }
+        .s-localizacao .container .info-localizacao .left-localizacao h2 {
+          color: #c8bcac;
+          font-size: 29px;
+          text-align: center; }
+        .s-localizacao .container .info-localizacao .left-localizacao .info-left-localizacao p {
+          color: #7a7a7a;
+          font-size: 14px !important;
+          text-align: center !important; }
+        .s-localizacao .container .info-localizacao .left-localizacao .info-left-localizacao h3 {
+          color: #7B7B7B;
+          text-align: center !important;
+          margin: 2rem 0; }
+        .s-localizacao .container .info-localizacao .left-localizacao .number-left-localizacao {
+          margin-top: 2rem;
+          background: #c8bcac;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+          -webkit-justify-content: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          height: 30%;
+          padding: 3rem 0 !important; }
+          .s-localizacao .container .info-localizacao .left-localizacao .number-left-localizacao a {
+            padding: 2rem 5rem;
+            background: #dfd7cc;
+            -webkit-border-radius: 30px;
+                    border-radius: 30px;
+            color: #fff;
+            text-transform: uppercase;
+            font-size: 14px;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center; }
+            .s-localizacao .container .info-localizacao .left-localizacao .number-left-localizacao a i {
+              margin-right: 1rem;
+              font-size: 2rem; }
+            .s-localizacao .container .info-localizacao .left-localizacao .number-left-localizacao a:hover {
+              -webkit-transform: translateY(-3px);
+                  -ms-transform: translateY(-3px);
+                      transform: translateY(-3px);
+              -webkit-transition: all 0.2s;
+              -o-transition: all 0.2s;
+              transition: all 0.2s;
+              color: #c8bcac;
+              cursor: pointer; }
+      .s-localizacao .container .info-localizacao .right-localizacao {
+        width: 100% !important; }
+        .s-localizacao .container .info-localizacao .right-localizacao .info-left-localizacao {
+          padding: 2rem; }
+          .s-localizacao .container .info-localizacao .right-localizacao .info-left-localizacao .localizacao-mapa {
+            max-width: 100%; }
+            .s-localizacao .container .info-localizacao .right-localizacao .info-left-localizacao .localizacao-mapa iframe {
+              width: 100%; } }
+
+.container {
+  width: 90%;
+  margin: 0 auto; }
+
+.s-tratamento-base {
+  margin: 6rem 0; }
+  .s-tratamento-base .container .info-tratamento-base {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%; }
+    .s-tratamento-base .container .info-tratamento-base .tratamento-base-left {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      width: 50%; }
+      .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left p {
+        color: #7a7a7a;
+        margin: 2rem 0;
+        width: 85%;
+        font-size: 16px; }
+      .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left h2 {
+        color: #c8bcac;
+        font-size: 40px; }
+      .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left a {
+        color: #7a7a7a; }
+    .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right {
+      width: 50%;
+      background: #c8bcac;
+      padding: 5rem;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right .img-right-tratamentoBase {
+        margin: 0 0 0 -20%; }
+        .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right .img-right-tratamentoBase img {
+          width: 100%;
+          height: auto; }
