--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -1043,6 +1043,20 @@ li {
   width: 90%;
   margin: 0 auto; }
 
+.invisalign-left {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse; }
+
+.img-invisalign {
+  margin: 0 0 0 20% !important; }
+
 .s-tratamento-base {
   margin: 6rem 0; }
   .s-tratamento-base .container .info-tratamento-base {
@@ -1076,6 +1090,11 @@ li {
         font-size: 40px; }
       .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left a {
         color: #7a7a7a; }
+      .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left ul li {
+        color: #7a7a7a;
+        list-style: disc;
+        margin: 1rem 0;
+        font-size: 14px; }
     .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right {
       width: 50%;
       background: #c8bcac;
@@ -1097,3 +1116,66 @@ li {
         .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right .img-right-tratamentoBase img {
           width: 100%;
           height: auto; }
+
+@media only screen and (max-width: 456px) {
+  .s-tratamento-base {
+    margin: 6rem 0; }
+    .s-tratamento-base .container .info-tratamento-base {
+      display: block;
+      width: 100%; }
+      .s-tratamento-base .container .info-tratamento-base .tratamento-base-left {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        text-align: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        width: 100%;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left p {
+          color: #7a7a7a;
+          margin: 2rem 0;
+          width: 100%;
+          font-size: 14px; }
+        .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left h2 {
+          color: #c8bcac;
+          font-size: 35px; }
+        .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left a {
+          color: #7a7a7a; }
+        .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left ul {
+          text-align: center;
+          margin: 0 auto;
+          color: #7a7a7a;
+          text-align: center;
+          width: 80%;
+          font-size: 14px !important; }
+      .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right {
+        width: 100vw !important;
+        background: none !important;
+        padding: 0rem !important;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right .img-right-tratamentoBase img {
+          width: 100%;
+          height: auto; } }
