--- a/src/resources/sass/components/_tratamentoBase.sass
+++ b/src/resources/sass/components/_tratamentoBase.sass
@@ -1,5 +1,11 @@
 @import './_pattern'
 @import './_responsive'
+.invisalign-left
+  display: flex
+  flex-direction: row-reverse
+
+.img-invisalign
+  margin: 0 0 0 20% !important
 
 .s-tratamento-base
   margin: 6rem 0
@@ -23,6 +29,12 @@
             font-size: 40px
           a
             color: $color-p
+          ul
+            li
+              color: $color-p
+              list-style: disc
+              margin: 1rem 0
+              font-size: 14px
       .tratamentoBase-right
         width: 50%
         background: $bege-padrao
@@ -35,3 +47,48 @@
           img
             width: 100%
             height: auto
+
+@media only screen and (max-width: 456px)
+  .s-tratamento-base
+    margin: 6rem 0
+    .container
+      .info-tratamento-base
+        display: block
+        width: 100% 
+        .tratamento-base-left
+          display: flex
+          text-align: center
+          flex-direction: column
+          justify-content: center
+          width: 100%
+          align-items: center 
+          .content-tratamentoBase-left
+            p
+              color: $color-p
+              margin: 2rem 0
+              width: 100%
+              font-size: 14px
+            h2
+              color: $bege-padrao
+              font-size: 35px
+            a
+              color: $color-p
+            ul
+              text-align: center
+              margin: 0 auto
+              li
+              color: $color-p
+              text-align: center
+              width: 80%
+              font-size: 14px !important
+        .tratamentoBase-right
+          width: 100vw !important
+          background: none !important
+          padding: 0rem !important
+          display: flex
+          align-items: center
+          justify-content: center
+          .img-right-tratamentoBase
+            img
+              width: 100%
+              height: auto
