ajustes de layout padrao

--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -1087,7 +1087,8 @@ li {
         font-size: 16px; }
       .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left h2 {
         color: #c8bcac;
-        font-size: 40px; }
+        font-size: 40px;
+        margin-bottom: 2rem; }
       .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left a {
         color: #7a7a7a; }
       .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left ul li {
@@ -1095,6 +1096,9 @@ li {
         list-style: disc;
         margin: 1rem 0;
         font-size: 14px; }
+      .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left strong {
+        color: #7B7B7B;
+        font-size: 16px; }
     .s-tratamento-base .container .info-tratamento-base .tratamentoBase-right {
       width: 50%;
       background: #c8bcac;
