--- a/src/resources/sass/components/_tratamentoBase.sass
+++ b/src/resources/sass/components/_tratamentoBase.sass
@@ -27,6 +27,7 @@
           h2
             color: $bege-padrao
             font-size: 40px
+            margin-bottom: 2rem
           a
             color: $color-p
           ul
@@ -35,6 +36,10 @@
               list-style: disc
               margin: 1rem 0
               font-size: 14px
+          strong
+            color: $color-titulo
+            font-size: 16px
+
       .tratamentoBase-right
         width: 50%
         background: $bege-padrao
