--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -7,3 +7,4 @@
 @import './components/_banner'
 @import './components/_localizacao'
 @import './components/_tratamentoBase'
+@import './components/_index'
