--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -1205,3 +1205,84 @@ li {
     transition: all 0.2s;
     -webkit-box-shadow: 4px 4px 4px 8px;
             box-shadow: 4px 4px 4px 8px; }
+
+.container {
+  width: 90%;
+  margin: 0 auto; }
+
+header {
+  -webkit-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.3); }
+  header nav {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 3rem 0; }
+    header nav .agendarHeader {
+      padding: 1.5rem 3rem;
+      background: #c8bcac;
+      color: #fff;
+      -webkit-border-radius: 30px;
+              border-radius: 30px; }
+      header nav .agendarHeader i {
+        margin-right: 1rem; }
+    header nav ul li {
+      display: inline-block;
+      position: relative;
+      padding: 1rem 2rem;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      border: 1px 0;
+      border-color: #c4c4c4;
+      background-color: #fff; }
+      header nav ul li.dropdown .dropdown-menu {
+        display: none;
+        position: absolute;
+        z-index: 1; }
+      header nav ul li.dropdown:hover .dropdown-menu {
+        display: block; }
+      header nav ul li.dropdown .submenu .submenu-menu {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 100%;
+        z-index: 1;
+        width: 30rem;
+        background-color: #fff;
+        margin-left: 1rem;
+        border-bottom: 0.5px solid #7a7a7a;
+        border-top: 0.5px solid #7a7a7a; }
+      header nav ul li.dropdown .submenu:hover .submenu-menu {
+        display: block; }
+      header nav ul li.dropdown .submenu::after {
+        content: "";
+        display: inline-block;
+        width: 0;
+        height: 0;
+        border-top: 6px solid #7a7a7a;
+        border-bottom: 6px solid #7a7a7a;
+        border-left: 6px solid #7a7a7a;
+        position: absolute;
+        top: 50%;
+        right: -8px;
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%); }
+      header nav ul li a {
+        color: #7B7B7B;
+        font-weight: bolder; }
