--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -8,3 +8,4 @@
 @import './components/_localizacao'
 @import './components/_tratamentoBase'
 @import './components/_index'
+@import './components/_header'
