base header e banner

--- a/src/resources/sass/components/_index.sass
+++ b/src/resources/sass/components/_index.sass
@@ -17,3 +17,27 @@
               transform: translateY(-10px)
               transition: all 0.2s
               box-shadow: 4px 4px 4px 8px
+
+.s-itens-menu
+  margin-top: -7rem
+  .container
+    .itens-index
+      display: flex
+      justify-content: space-around
+      .box-iten-index
+        padding: 5rem 6rem
+        color: #fff
+        background-color: $bege-padrao
+        border-radius: 15px
+    .iten-tratamento
+      display: flex
+      justify-content: center
+      align-items: center
+      text-align: center
+      margin-top: 4rem
+      a
+        color: $bege-padrao
+        padding: 1rem 2rem
+        border: 2px solid $bege-padrao
+        border-radius: 30px
+        width: 30%
