--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -810,6 +810,23 @@ li {
   width: 90%;
   margin: 0 auto; }
 
+.s-banner .imgBanner img {
+  max-width: 100%;
+  max-height: 80%; }
+
+.s-banner .container .msgBanner {
+  position: absolute;
+  top: 60%;
+  right: 45%; }
+  .s-banner .container .msgBanner h1 {
+    color: #fff;
+    margin-bottom: 2rem; }
+  .s-banner .container .msgBanner h3 {
+    color: #fff; }
+  .s-banner .container .msgBanner img {
+    background-color: #fff;
+    margin-bottom: 1rem; }
+
 .container {
   width: 90%;
   margin: 0 auto; }
@@ -1205,6 +1222,45 @@ li {
     transition: all 0.2s;
     -webkit-box-shadow: 4px 4px 4px 8px;
             box-shadow: 4px 4px 4px 8px; }
+
+.s-itens-menu {
+  margin-top: -7rem; }
+  .s-itens-menu .container .itens-index {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; }
+    .s-itens-menu .container .itens-index .box-iten-index {
+      padding: 5rem 6rem;
+      color: #fff;
+      background-color: #c8bcac;
+      -webkit-border-radius: 15px;
+              border-radius: 15px; }
+  .s-itens-menu .container .iten-tratamento {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin-top: 4rem; }
+    .s-itens-menu .container .iten-tratamento a {
+      color: #c8bcac;
+      padding: 1rem 2rem;
+      border: 2px solid #c8bcac;
+      -webkit-border-radius: 30px;
+              border-radius: 30px;
+      width: 30%; }
 
 .container {
   width: 90%;
