--- a/src/resources/sass/components/_banner.sass
+++ b/src/resources/sass/components/_banner.sass
@@ -1,2 +1,21 @@
 @import './_pattern'
 @import './_responsive'
+
+.s-banner
+  .imgBanner
+    img
+      max-width: 100%
+      max-height: 80%
+  .container
+    .msgBanner
+      position: absolute
+      top: 60%
+      right: 45%
+      h1
+        color: #fff
+        margin-bottom: 2rem
+      h3
+        color: #fff
+      img
+        background-color: #fff
+        margin-bottom: 1rem
