--- a/src/resources/sass/components/_index.sass
+++ b/src/resources/sass/components/_index.sass
@@ -25,10 +25,11 @@
       display: flex
       justify-content: space-around
       .box-iten-index
-        padding: 5rem 6rem
+        padding: 5rem 3rem
         color: #fff
         background-color: $bege-padrao
         border-radius: 15px
+        font-size: 29px
     .iten-tratamento
       display: flex
       justify-content: center
