--- a/src/resources/sass/components/_header.sass
+++ b/src/resources/sass/components/_header.sass
@@ -3,6 +3,10 @@
 
 header
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.3)
+  background: #fff
+  position: fixed
+  width: 100%
+  z-index: 999999999999
   nav
     display: flex
     justify-content: space-between
