--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -6,3 +6,4 @@
 @import './components/_day-clinic'
 @import './components/_banner'
 @import './components/_localizacao'
+@import './components/_header'
