avaliacoes no carrousel index banner e demais ajustes

--- a/src/resources/sass/components/_equipe.sass
+++ b/src/resources/sass/components/_equipe.sass
@@ -17,12 +17,13 @@
       width: 100%
       margin: 4rem 0
       .equipe-curriculo
-        width: 33.33%
-        padding: 2rem
+        padding: 1rem
         display: flex
         flex-direction: column
         align-items: center
         justify-content: center
+        &:first-child
+          margin-top: -3rem
         span
           color: $bege-padrao
           font-size: 29px
@@ -34,8 +35,7 @@
           text-align: center
         .img-curriculo
           img
-            width: 25rem
-            height: 25rem
+            width: 100%
             border-radius: 50%
             margin-bottom: 2rem
 
