--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -538,8 +538,7 @@ li {
     width: 100%;
     margin: 4rem 0; }
     .s-equipe .container .equipe-info .equipe-curriculo {
-      width: 33.33%;
-      padding: 2rem;
+      padding: 1rem;
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -557,6 +556,8 @@ li {
       -webkit-justify-content: center;
           -ms-flex-pack: center;
               justify-content: center; }
+      .s-equipe .container .equipe-info .equipe-curriculo:first-child {
+        margin-top: -3rem; }
       .s-equipe .container .equipe-info .equipe-curriculo span {
         color: #c8bcac;
         font-size: 29px;
@@ -567,8 +568,7 @@ li {
         color: #7a7a7a;
         text-align: center; }
       .s-equipe .container .equipe-info .equipe-curriculo .img-curriculo img {
-        width: 25rem;
-        height: 25rem;
+        width: 100%;
         -webkit-border-radius: 50%;
                 border-radius: 50%;
         margin-bottom: 2rem; }
@@ -805,6 +805,27 @@ li {
         .s-dayClinic .container .info-dayClinic .dayClinic-right .img-right-dayClinc img {
           width: 100%;
           height: auto; } }
+
+.container {
+  width: 90%;
+  margin: 0 auto; }
+
+.s-banner .imgBanner img {
+  max-width: 100%;
+  max-height: 80%; }
+
+.s-banner .container .msgBanner {
+  position: absolute;
+  top: 45%;
+  right: 45%; }
+  .s-banner .container .msgBanner h1 {
+    color: #fff;
+    margin-bottom: 2rem; }
+  .s-banner .container .msgBanner h3 {
+    color: #fff; }
+  .s-banner .container .msgBanner img {
+    background-color: #fff;
+    margin-bottom: 1rem; }
 
 .container {
   width: 90%;
@@ -1184,6 +1205,68 @@ li {
   width: 90%;
   margin: 0 auto; }
 
+.s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left .agendarIndex {
+  padding: 1rem 1.5rem;
+  background: #c8bcac;
+  font-weight: bold;
+  -webkit-border-radius: 30px;
+          border-radius: 30px;
+  color: #fff;
+  margin-top: 1rem; }
+  .s-tratamento-base .container .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left .agendarIndex:hover {
+    -webkit-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+            transform: translateY(-10px);
+    -webkit-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+    -webkit-box-shadow: 4px 4px 4px 8px;
+            box-shadow: 4px 4px 4px 8px; }
+
+.s-itens-menu {
+  margin-top: -7rem; }
+  .s-itens-menu .container .itens-index {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; }
+    .s-itens-menu .container .itens-index .box-iten-index {
+      padding: 5rem 3rem;
+      color: #fff;
+      background-color: #c8bcac;
+      -webkit-border-radius: 15px;
+              border-radius: 15px;
+      font-size: 29px; }
+  .s-itens-menu .container .iten-tratamento {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin-top: 4rem; }
+    .s-itens-menu .container .iten-tratamento a {
+      color: #c8bcac;
+      padding: 1rem 2rem;
+      border: 2px solid #c8bcac;
+      -webkit-border-radius: 30px;
+              border-radius: 30px;
+      width: 30%; }
+
+.container {
+  width: 90%;
+  margin: 0 auto; }
+
 header {
   position: fixed;
   width: 100%;
@@ -1287,3 +1370,15 @@ header {
               display: block;
               opacity: 1;
               height: 100%; }
+
+.container {
+  width: 90%;
+  margin: 0 auto; }
+
+.s-depoimento {
+  background: #c8bcac;
+  padding: 6rem 0; }
+  .s-depoimento .container .box-depoimento h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #fff; }
