--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -4,8 +4,9 @@
 @import './components/_contato'
 @import './components/_equipe'
 @import './components/_day-clinic'
-// @import './components/_bannerRobert'
+@import './components/_banner'
 @import './components/_localizacao'
 @import './components/_tratamentoBase'
-// @import './components/_indexRobert'
+@import './components/_index'
 @import './components/_header'
+@import './components/_depoimentos'
