--- a/src/resources/sass/components/_equipe.sass
+++ b/src/resources/sass/components/_equipe.sass
@@ -22,8 +22,8 @@
         flex-direction: column
         align-items: center
         justify-content: center
-        &:first-child
-          margin-top: -3rem
+        // &:first-child
+        //   margin-top: -3rem
         span
           color: $bege-padrao
           font-size: 29px
