--- a/src/resources/sass/components/_index.sass
+++ b/src/resources/sass/components/_index.sass
@@ -42,3 +42,9 @@
         border: 2px solid $bege-padrao
         border-radius: 30px
         width: 30%
+
+.s-depoimento
+  .container
+    .box-depoimento
+      #reviews-carousel
+        padding: 0 4rem
