--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -1508,3 +1508,49 @@ header {
           font-weight: bold;
           font-size: 2.5rem;
           color: #7a7a7a; }
+
+.container {
+  width: 90%;
+  margin: 0 auto; }
+
+.s-blog .container .blog-news .blog-news-left .news-left p {
+  margin: 2rem 0; }
+
+.s-blog .container .blog-news .blog-news-left .news-left .list-itens-news-page ul {
+  margin-left: 3rem; }
+  .s-blog .container .blog-news .blog-news-left .news-left .list-itens-news-page ul li {
+    list-style-type: disc; }
+
+.s-blog .container .blog-news .blog-news-left .news-left .divisao-tags-page {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .s-blog .container .blog-news .blog-news-left .news-left .divisao-tags-page a {
+    margin: 0 2rem;
+    padding: 0.5rem 1.5rem;
+    border: 1px solid #e0e1e1; }
+    .s-blog .container .blog-news .blog-news-left .news-left .divisao-tags-page a:hover {
+      background: #03a9f4; }
+
+.s-blog .container .tags-pages-blog {
+  border: 1px solid #e0e1e1;
+  border-top: none;
+  width: 68.3%;
+  padding: 3rem 2rem;
+  margin-top: -3rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
