--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -12,3 +12,4 @@
 @import './components/_depoimentos'
 @import './components/_blog'
 @import './components/_page-blog'
+@import './components/_header-teste'
