--- a/src/resources/sass/components/_page-blog.sass
+++ b/src/resources/sass/components/_page-blog.sass
@@ -20,6 +20,7 @@
               margin: 0 2rem 
               padding: 0.5rem 1.5rem
               border: 1px solid #e0e1e1
+              white-space: nowrap
               &:hover
                 background: #03a9f4
     .tags-pages-blog
