--- a/src/resources/sass/components/_page-blog.sass
+++ b/src/resources/sass/components/_page-blog.sass
@@ -16,6 +16,7 @@
           .divisao-tags-page
             display: flex
             align-items: center
+            flex-wrap: wrap
             a
               margin: 0 2rem 
               padding: 0.5rem 1.5rem
