--- a/src/resources/sass/components/_pattern.sass
+++ b/src/resources/sass/components/_pattern.sass
@@ -18,6 +18,16 @@ $bege-padrao: #c8bcac
 $bege-links: #dfd7cc
 $branco-padrao: #ffffff
 
+body
+  font-family: 'Roboto'
+
 .container
-  width: 90%
+  max-width: 1140px
   margin: 0 auto
+
+@media only screen and (max-width: 768px)
+  h2
+    font-size: 3.5rem !important
+  p
+    font-size: 1.4rem !important
+    line-height: 2rem
