--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -11,3 +11,5 @@
 @import './components/_header'
 @import './components/_depoimentos'
 @import './components/_blog'
+@import './components/_button-wpp'
+@import './components/_fonts'
