--- a/src/resources/sass/components/_tratamentoBase.sass
+++ b/src/resources/sass/components/_tratamentoBase.sass
@@ -9,91 +9,120 @@
 
 .s-tratamento-base
   margin: 6rem 0
-  .container
-    .info-tratamento-base
+  // .container
+  .info-tratamento-base
+    display: flex
+    width: 100% 
+    .tratamento-base-left
       display: flex
-      width: 100% 
+      flex-direction: column
+      justify-content: center
+      width: 50%
+      // margin-left: 2rem
+      .content-tratamentoBase-left
+        p
+          color: $color-p
+          margin: 2rem 0
+          width: 85%
+          font-size: 16px
+        h2
+          color: $bege-padrao
+          font-size: 40px
+          margin-bottom: 2rem
+          font-weight: 400
+        a
+          color: $color-p
+        ul
+          li
+            color: $color-p
+            list-style: disc
+            margin: 1rem 0
+            font-size: 14px
+        strong
+          color: $color-titulo
+          font-size: 16px
+    .p-10
+      padding: 8%
+
+
+    .tratamentoBase-right
+      width: 50%
+      background: $bege-padrao
+      padding: 5rem
+      display: flex
+      // align-items: center
+      justify-content: center
+      // padding: 8%
+      .img-right-tratamentoBase
+        margin: 0 0 0 -20%
+        img
+          width: 100%
+          height: auto
+        .ml-2
+          margin-left: 15%
+  
+@media only screen and (max-width: 1024px)
+  .s-tratamento-base
+    .invisalign-left
+      flex-direction: row
+      .tratamentoBase-right
+        .img-right-tratamentoBase
+          .ml-2
+            margin: 0
+
+@media only screen and (max-width: 768px)
+  .s-tratamento-base
+    .info-tratamento-base
+      flex-direction: column
       .tratamento-base-left
-        display: flex
-        flex-direction: column
-        justify-content: center
-        width: 50%
+        width: 100%
+        padding: 0 5%
         .content-tratamentoBase-left
           p
-            color: $color-p
-            margin: 2rem 0
-            width: 85%
-            font-size: 16px
-          h2
-            color: $bege-padrao
-            font-size: 40px
-            margin-bottom: 2rem
-          a
-            color: $color-p
-          ul
-            li
-              color: $color-p
-              list-style: disc
-              margin: 1rem 0
-              font-size: 14px
-          strong
-            color: $color-titulo
-            font-size: 16px
-
-      .tratamentoBase-right
-        width: 50%
-        background: $bege-padrao
-        padding: 5rem
-        display: flex
-        align-items: center
-        justify-content: center
-        .img-right-tratamentoBase
-          margin: 0 0 0 -20%
-          img
             width: 100%
-            height: auto
+            text-align: center
 
 @media only screen and (max-width: 456px)
   .s-tratamento-base
     margin: 6rem 0
-    .container
-      .info-tratamento-base
-        display: block
-        width: 100% 
-        .tratamento-base-left
-          display: flex
-          text-align: center
-          flex-direction: column
-          justify-content: center
-          width: 100%
-          align-items: center 
-          .content-tratamentoBase-left
-            p
-              color: $color-p
-              margin: 2rem 0
-              width: 100%
-              font-size: 14px
-            h2
-              color: $bege-padrao
-              font-size: 35px
-            a
-              color: $color-p
-            ul
-              text-align: center
-              margin: 0 auto
-              li
-              color: $color-p
-              text-align: center
-              width: 80%
-              font-size: 14px !important
-        .tratamentoBase-right
-          width: 100vw !important
-          background: none !important
-          padding: 0rem !important
-          display: flex
-          align-items: center
-          justify-content: center
-          .img-right-tratamentoBase
-            img
-              width: 100%
-              height: auto
+    .info-tratamento-base
+      display: block
+      width: 100% 
+      .tratamento-base-left
+        display: flex
+        text-align: center
+        flex-direction: column
+        justify-content: center
+        width: 100%
+        align-items: center 
+        .content-tratamentoBase-left
+          p
+            color: $color-p
+            margin: 2rem 0
+            width: 100%
+            font-size: 14px
+          h2
+            color: $bege-padrao
+            font-size: 35px
+          a
+            color: $color-p
+          ul
+            text-align: center
+            margin: 0 auto
+            li
+            color: $color-p
+            text-align: center
+            width: 80%
+            font-size: 14px !important
+      .tratamentoBase-right
+        width: 100vw !important
+        background: none !important
+        padding: 0rem !important
+        display: flex
+        align-items: center
+        justify-content: center
+        .img-right-tratamentoBase
+          img
+            width: 100%
+            height: auto
+            
