--- a/src/resources/sass/components/_index.sass
+++ b/src/resources/sass/components/_index.sass
@@ -176,8 +176,8 @@
             // width: 100%
             text-align: center
             margin: 03% 10% 0% 10%
-          p
-            margin-bottom: 0 !important
+          // p
+          //   margin-bottom: 0 !important
       .tratamentoBase-right
         width: 100%
         background: none
