--- a/src/resources/sass/components/_tratamentoBase.sass
+++ b/src/resources/sass/components/_tratamentoBase.sass
@@ -81,6 +81,10 @@
           p
             width: 100%
             text-align: center
+          strong
+            text-align: center
+            width: 100%
+            display: block
 
 @media only screen and (max-width: 456px)
   .s-tratamento-base
