--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -341,6 +341,48 @@ body {
             color: #c8bcac;
             white-space: nowrap; } }
 
+@media only screen and (max-width: 768px) {
+  .info-contato {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .info-contato .info-contato-left {
+      width: 100% !important; }
+      .info-contato .info-contato-left .conteudo-contato-left {
+        width: 100%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .info-contato .info-contato-left .conteudo-contato-left .buttons-contato {
+          width: 40%;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center; }
+    .info-contato .info-contato-right {
+      width: 100% !important; } }
+
 @media only screen and (max-width: 456px) {
   .s-contato {
     display: -webkit-box;
@@ -586,7 +628,8 @@ body {
       -webkit-box-pack: center;
       -webkit-justify-content: center;
           -ms-flex-pack: center;
-              justify-content: center; }
+              justify-content: center;
+      width: 50%; }
       .s-equipe .container .equipe-info .equipe-curriculo span {
         color: #c8bcac;
         font-size: 29px;
@@ -684,13 +727,13 @@ body {
 
 .s-dayClinic {
   margin: 6rem 0; }
-  .s-dayClinic .container .info-dayClinic {
+  .s-dayClinic .info-dayClinic {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     width: 100%; }
-    .s-dayClinic .container .info-dayClinic .dayClinic-left {
+    .s-dayClinic .info-dayClinic .dayClinic-left {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -704,19 +747,21 @@ body {
       -webkit-justify-content: center;
           -ms-flex-pack: center;
               justify-content: center;
-      width: 50%; }
-      .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left p {
+      width: 40%;
+      margin: 0 5% 0 10%; }
+      .s-dayClinic .info-dayClinic .dayClinic-left .content-dayClinic-left p {
         color: #7a7a7a;
         margin: 2rem 0;
         width: 85%;
         font-size: 16px; }
-      .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left h2 {
+      .s-dayClinic .info-dayClinic .dayClinic-left .content-dayClinic-left h2 {
         color: #c8bcac;
-        font-size: 40px; }
-      .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left a {
+        font-size: 40px;
+        font-weight: 400; }
+      .s-dayClinic .info-dayClinic .dayClinic-left .content-dayClinic-left a {
         color: #7a7a7a; }
-    .s-dayClinic .container .info-dayClinic .dayClinic-right {
-      width: 50%;
+    .s-dayClinic .info-dayClinic .dayClinic-right {
+      width: 60%;
       background: #c8bcac;
       padding: 5rem;
       display: -webkit-box;
@@ -731,9 +776,9 @@ body {
       -webkit-justify-content: center;
           -ms-flex-pack: center;
               justify-content: center; }
-      .s-dayClinic .container .info-dayClinic .dayClinic-right .img-right-dayClinc {
+      .s-dayClinic .info-dayClinic .dayClinic-right .img-right-dayClinc {
         margin: 0 0 0 -20%; }
-        .s-dayClinic .container .info-dayClinic .dayClinic-right .img-right-dayClinc img {
+        .s-dayClinic .info-dayClinic .dayClinic-right .img-right-dayClinc img {
           width: 100%;
           height: auto; }
 
@@ -787,15 +832,55 @@ body {
       .mobile-dayClinic .infos-mobile-dayClinic .mapa-mobile-dayClinic a i {
         font-size: 1.5rem; }
 
+@media only screen and (max-width: 768px) {
+  .info-dayClinic {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .info-dayClinic .dayClinic-left {
+      width: 100% !important;
+      margin: 0 !important;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      .info-dayClinic .dayClinic-left .content-dayClinic-left {
+        width: 85%; }
+        .info-dayClinic .dayClinic-left .content-dayClinic-left h2 {
+          text-align: center; }
+        .info-dayClinic .dayClinic-left .content-dayClinic-left p {
+          text-align: center;
+          width: 100% !important; }
+    .info-dayClinic .dayClinic-right {
+      background: none !important;
+      width: 100% !important;
+      padding: 0 !important;
+      margin: 5rem 0; }
+  .slick-next {
+    right: 0 !important;
+    display: none !important; }
+  .slick-dots {
+    position: relative !important; } }
+
 @media only screen and (max-width: 456px) {
   .mobile-dayClinic {
     display: block !important; }
   .s-dayClinic {
     margin: 6rem 0; }
-    .s-dayClinic .container .info-dayClinic {
+    .s-dayClinic .info-dayClinic {
       display: block;
       width: 100%; }
-      .s-dayClinic .container .info-dayClinic .dayClinic-left {
+      .s-dayClinic .info-dayClinic .dayClinic-left {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
@@ -815,17 +900,17 @@ body {
         -webkit-align-items: center;
             -ms-flex-align: center;
                 align-items: center; }
-        .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left p {
+        .s-dayClinic .info-dayClinic .dayClinic-left .content-dayClinic-left p {
           color: #7a7a7a;
           margin: 2rem 0;
           width: 100%;
           font-size: 14px; }
-        .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left h2 {
+        .s-dayClinic .info-dayClinic .dayClinic-left .content-dayClinic-left h2 {
           color: #c8bcac;
           font-size: 35px; }
-        .s-dayClinic .container .info-dayClinic .dayClinic-left .content-dayClinic-left a {
+        .s-dayClinic .info-dayClinic .dayClinic-left .content-dayClinic-left a {
           color: #7a7a7a; }
-      .s-dayClinic .container .info-dayClinic .dayClinic-right {
+      .s-dayClinic .info-dayClinic .dayClinic-right {
         width: 100vw !important;
         background: none !important;
         padding: 0rem !important;
@@ -841,7 +926,7 @@ body {
         -webkit-justify-content: center;
             -ms-flex-pack: center;
                 justify-content: center; }
-        .s-dayClinic .container .info-dayClinic .dayClinic-right .img-right-dayClinc img {
+        .s-dayClinic .info-dayClinic .dayClinic-right .img-right-dayClinc img {
           width: 100%;
           height: auto; } }
 
@@ -1260,7 +1345,11 @@ body {
       padding: 0 5%; }
       .s-tratamento-base .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left p {
         width: 100%;
-        text-align: center; } }
+        text-align: center; }
+      .s-tratamento-base .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left strong {
+        text-align: center;
+        width: 100%;
+        display: block; } }
 
 @media only screen and (max-width: 456px) {
   .s-tratamento-base {
@@ -1565,8 +1654,6 @@ body {
     display: block;
     text-align: center;
     margin: 03% 10% 0% 10%; }
-  .s-tratamento-base .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left p {
-    margin-bottom: 0 !important; }
   .s-tratamento-base .info-tratamento-base .tratamentoBase-right {
     width: 100%;
     background: none;
