--- a/src/resources/sass/components/_equipe.sass
+++ b/src/resources/sass/components/_equipe.sass
@@ -22,6 +22,7 @@
         flex-direction: column
         align-items: center
         justify-content: center
+        width: 50%
         // &:first-child
         //   margin-top: -3rem
         span
